<resources>
    <string name="app_name" translatable="false">VottyArtist</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_registered_email">This email address is already registered</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="register">Register</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="none_group_selected">None group selected</string>
    <string name="confirm">Confirmation</string>
    <string name="confirm_msg">Are you sure you want to send group </string>
    <string name="send">send</string>
    <string name="vote">vote</string>
    <string name="voting">see current points</string>
    <string name="points">p</string>
    <string name="now">Right Now</string>
    <string name="next_events">Upcoming Events</string>
    <string name="new_event">New event</string>
    <string name="hint_event_name">Event name</string>
    <string name="hint_place">Place</string>
    <string name="hint_room">Room (optional)</string>
    <string name="save_event">Save event</string>
    <string name="import_songs">Import songs</string>
    <string name="delete_event">Delete event</string>
    <string name="incomplete">Incomplete information</string>
    <string name="to_a_vote"> to a vote?</string>
    <string name="group_to_select">Group to select</string>
    <string name="group_title_hint">Name of the group</string>
    <string name="make_groups">Make groups</string>
    <string name="create_event">Create event</string>
    <string name="modify_event">Modify event</string>
    <string name="old">Old</string>
    <string name="hint_group_name">Group name</string>
    <string name="four_songs">Only groups of 4 songs</string>
    <string name="Group_done">Group done!</string>
    <string name="confirmation">Are you sure you want to discard changes?</string>
    <string name="Discard">Discard</string>
    <string name="Email">Email</string>
    <string name="artistic_name">Artistic name</string>
    <string name="Password">Password (8 characters minimum)</string>
    <string name="repeat_password">Repeat password</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="phone">Phone number (Optional)</string>
    <string name="empty_fields">It is necessary to complete all obligatory fields</string>
    <string name="Pswd">Password</string>
    <string name="error_email_no_exist">This email does not exist</string>
    <string name="read_error">Read error</string>
    <string name="SignUp">Sign up</string>
    <string name="SignIn">Log in</string>
    <string name="short_password">Password is too short</string>
    <string name="error_database">Database error</string>
    <string name="error_internet_connection">No internet connection</string>
    <string name="click_back_twice">Click back again to exit</string>

</resources>
