<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="sergi.ivan.carles.artist.RegisterActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/signup_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/TextLayoutUsername"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/listPreferredItemHeight"
                    android:padding="14dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/Email"
                    android:maxLines="1"
                    android:ems="10" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextLayoutUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/TextLayoutPassword"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/listPreferredItemHeight"
                    android:padding="14dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/username"
                    android:maxLines="1"
                    android:ems="10" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextLayoutPassword"
                android:layout_above="@+id/TextLayoutPasswordRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/listPreferredItemHeight"
                    android:padding="14dp"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:hint="@string/Password"
                    android:ems="10"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextLayoutPasswordRepeat"
                android:layout_above="@+id/TextLayoutPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <EditText
                    android:id="@+id/edit_password_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/listPreferredItemHeight"
                    android:padding="14dp"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:hint="@string/repeat_password"
                    android:ems="10"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextLayoutCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/TextLayoutCity"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <EditText
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/listPreferredItemHeight"
                    android:padding="14dp"
                    android:inputType="textPersonName"
                    android:hint="@string/country"
                    android:maxLines="1"
                    android:ems="10" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextLayoutCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/TextLayoutPhone"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <EditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/listPreferredItemHeight"
                    android:padding="14dp"
                    android:inputType="textPersonName"
                    android:hint="@string/city"
                    android:maxLines="1"
                    android:ems="10" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextLayoutPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_signup"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/listPreferredItemHeight"
                    android:padding="14dp"
                    android:inputType="phone"
                    android:hint="@string/phone"
                    android:maxLines="1"
                    android:ems="10" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_signup"
                android:text="Sign Up"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeightLarge"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@android:color/holo_red_light"
                android:textColor="#ffffff"
                android:textSize="18sp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>