<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sergi.ivan.carles.artist.EventActivity">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:hint="@string/hint_event_name" />

    <View
        android:id="@+id/ruler"
        android:layout_below="@id/edit_name"
        android:background="#c4c4c4"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp" />

    <Button
        android:id="@+id/btn_end_date"
        android:text="15/10/2017"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:background="@android:color/transparent"
        android:padding="14dp"
        android:textSize="18sp"
        android:layout_below="@+id/btn_start_date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/btn_end_time"
        android:layout_toStartOf="@+id/btn_end_time" />

    <Button
        android:id="@+id/btn_end_time"
        android:text="18:00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="end"
        android:padding="14dp"
        android:textSize="18sp"
        android:layout_below="@+id/btn_start_time"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btn_start_time"
        android:text="18:00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="end"
        android:padding="14dp"
        android:textSize="18sp"
        android:layout_below="@+id/ruler"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btn_start_date"
        android:text="15/10/2017"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:background="@android:color/transparent"
        android:padding="14dp"
        android:textSize="18sp"
        android:layout_below="@+id/ruler"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/btn_end_time"
        android:layout_toStartOf="@+id/btn_end_time" />

    <View
        android:id="@+id/ruler2"
        android:layout_below="@id/btn_end_date"
        android:background="#c4c4c4"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/ruler2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/edit_place"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:padding="14dp"
        android:background="@android:color/transparent"
        android:hint="@string/hint_place" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/edit_place"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/edit_room"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:padding="14dp"
        android:background="@android:color/transparent"
        android:hint="@string/hint_room"/>

    <View
        android:id="@+id/ruler3"
        android:layout_below="@id/edit_room"
        android:background="#c4c4c4"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ruler3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/group_listView" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_menu_add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/btn_new_group"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp" />

</RelativeLayout>
